[package]
name = "wurth-telesto"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "telesto"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5.4", optional = true, features = ["derive"] }
embedded-io-adapters = { version = "0.6.1", optional = true, features = [
    "tokio-1",
] }
embedded-io-async = "0.6.1"
heapless = "0.8.0"
tokio = { version = "1.37.0", features = ["full"], optional = true }
tokio-serial = { version = "5.4.4", optional = true }
unescape = { version = "0.1.0", optional = true }

[features]
defmt-03 = ["embedded-io-async/defmt-03", "heapless/defmt-03"]
cli = [
    "dep:clap",
    "dep:tokio",
    "dep:embedded-io-adapters",
    "dep:tokio-serial",
    "dep:unescape",
]
